--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
+    "nodemon": "^1.18.3",
     "request": "^2.87.0"
   }
 }
